kubernetes/manifests/jambonz/webapp/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp
  name: webapp
  namespace: jambonz
spec:
  ports:
    - name: webapp
      port: 3001
      targetPort: 3001
  type: NodePort
  selector:
    app: webapp
