kubernetes/manifests/jambonz/webapp/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: jambonz
spec:
  rules:
    - host: k8s-gcp.jambonz.org
      http:
        paths:
        - backend:
            service:
              name: webapp
              port: 
                number: 3001
          path: /
          pathType: Prefix
